Kerberos 70% complete. Tests Missing and last message trip missing.